--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Hackaton</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">¿Cómo participar?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Sponsors</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#contact">Registro</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,11 +39,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Desencadena la Innovación</h1>
+                        <h1 class="text-white font-weight-bold">Desencadena la Innovación🚀</h1>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Sumérgete en la Primera Versión de AIEP Code4All y transforma ideas audaces en soluciones extraordinarias.</p>
+                        <p class="text-white-75 mb-5">¡Prepárate para ser parte de algo revolucionario! Te invitamos a sumergirte en la experiencia única de la primera edición de AIEP Code4All. Este 1 y 2 de Diciembre de 2023, no solo serás un participante, sino un pionero en un viaje de transformación tecnológica.🌟</p>
                         <a class="btn btn-primary btn-xl" href="#about">Quiero saber más</a>
                     </div>
                 </div>
@@ -54,10 +54,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">🌟 Únete a nosotros y, juntos, transformemos ideas audaces en soluciones extraordinarias. 🌟</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <h4 class="text-white mt-0">¿Qué es AIEP Code4All?</h4> <br> <p class="text-white-75 mb-4">Es el punto de encuentro donde mentes curiosas y espíritus emprendedores se unen para enfrentar desafíos, romper barreras y crear soluciones impactantes. No es solo una competencia, sino un espacio colaborativo que promueve el aprendizaje, la innovación y el desarrollo de soluciones que marcan la diferencia. Sea cual sea tu background, si tienes la pasión y el deseo de innovar, este es tu lugar. ¡Inscríbete hoy y forma parte de la historia de AIEP Code4All!</p>
+                        <a class="btn btn-light btn-xl" href="#services">¿Cómo participar?</a>
                     </div>
                 </div>
             </div>
@@ -65,35 +65,35 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-4 px-lg-5">
-                <h2 class="text-center mt-0">At Your Service</h2>
+                <h2 class="text-center mt-0">💻Cómo Participar en AIEP Code4All💻</h2>
                 <hr class="divider" />
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <div class="mb-2"><i class="bi-file-earmark-text fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Conoce las Bases</h3>
+                            <p class="text-muted mb-0">Comienza tu viaje con el pie derecho informándote sobre las reglas del juego. Conoce las temáticas, los desafíos que proponemos, y cómo serán evaluados los proyectos. Entender el marco de trabajo te permitirá navegar el evento con confianza y estrategia. [Enlace a las bases o reglamento del hackathon].</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <div class="mb-2"><i class="bi-people fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Forma tu Alianza</h3>
+                            <p class="text-muted mb-0">La colaboración es la esencia de la innovación en AIEP Code4All. Reúne un grupo de mentes brillantes o únete a otros innovadores en tu emocionante viaje hacia la creación de soluciones tecnológicas. Recuerda, juntos somos más fuertes. [Enlace para formar un equipo o unirse a uno].</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                            <div class="mb-2"><i class="bi-calendar3 fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Planifica Tu Estrategia</h3>
+                            <p class="text-muted mb-0">Un buen plan es tu mapa al tesoro. Organiza tu agenda, asigna roles dentro de tu equipo, y establece tiempos para brainstorming, desarrollo, y pruebas. Un enfoque estructurado te permitirá gestionar el tiempo con eficiencia y mantener el ímpetu durante el evento. [Enlace a recursos de planificación o metodologías sugeridas].</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <div class="mb-2"><i class="bi-pencil-square fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Registro Oficial</h3>
+                            <p class="text-muted mb-0">¡Estás a solo un paso de hacer historia en AIEP Code4All! Completa tu inscripción, confirma los detalles de tu equipo y prepárate para una aventura llena de tecnología e innovación. Este es tu momento para brillar. [Enlace al proceso de registro].</p>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/sponsors/huevohost.png" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/sponsors/playa.png" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/sponsors/zeroq.png" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/sponsors/tiexpress.png" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
